# SuperAdvancePets

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.gba  README.md  SuperAdvancePets.cbp  SuperAdvancePetsCLI  SuperAdvancePetsCLI.cbp  cli.c  cmake_install.cmake  sap.elf  sap.gba
engine/: 1_pet_ant.c  1_pet_ant.h  2_pet_beaver.c  2_pet_beaver.h  3_pet_cricket.c  3_pet_cricket.h  4_pet_cricket_zombie.h  battle.c  battle.h  globals.c  globals.h  impl.h  opponents.h  pets.h  triggers.c  triggers.h
engine/food_impl/: 101_apple_impl.c  101_apple_impl.h  102_cannedFood_impl.c  102_cannedFood_impl.h  103_chili_impl.c  103_chili_impl.h  104_chocolate_impl.c  104_chocolate_impl.h  105_cupcake_impl.c  105_cupcake_impl.h  106_garlic_impl.c  106_garlic_impl.h  107_honey_impl.c  107_honey_impl.h  108_meatBone_impl.c  108_meatBone_impl.h  109_melon_impl.c  109_melon_impl.h  110_milk_impl.c  110_milk_impl.h  111_mushroom_impl.c  111_mushroom_impl.h  112_pear_impl.c  112_pear_impl.h  113_pizza_impl.c  113_pizza_impl.h  114_saladBowl_impl.c  114_saladBowl_impl.h  115_sleepingPill_impl.c  115_sleepingPill_impl.h  116_steak_impl.c  116_steak_impl.h  117_sushi_impl.c  117_sushi_impl.h  118_peanuts_impl.c  118_peanuts_impl.h  119_coconut_impl.h
engine/pet_impl/: 10_cat_impl.c  10_cat_impl.h  11_chick_impl.c  11_chick_impl.h  12_cow_impl.c  12_cow_impl.h  13_crab_impl.c  13_crab_impl.h  14_cricket_impl.c  14_cricket_impl.h  15_crocodile_impl.c  15_crocodile_impl.h  16_deer_impl.c  16_deer_impl.h  17_dirtyRat_impl.c  17_dirtyRat_impl.h  18_dodo_impl.c  18_dodo_impl.h  19_dog_impl.c  19_dog_impl.h  1_ant_impl.c  1_ant_impl.h  20_dolphin_impl.c  20_dolphin_impl.h  21_dragon_impl.c  21_dragon_impl.h  22_duck_impl.c  22_duck_impl.h  23_elephant_impl.c  23_elephant_impl.h  24_fish_impl.c  24_fish_impl.h  25_flamingo_impl.c  25_flamingo_impl.h  26_fly_impl.c  26_fly_impl.h  27_giraffe_impl.c  27_giraffe_impl.h  28_gorilla_impl.c  28_gorilla_impl.h  (+91 more)
extras/fonts/: fonts.h
extras/scripts/: api2ch.js  register.js  tiles.js
sprites/: animals.h  ant.c  ant.h  apple.c  apple.h  apply.c  apply.h  bad_rat.c  bad_rat.h  badger.c  badger.h  beaver.c  beaver.h  bee.c  bee.h  bg.c  bg.h  bison.c  bison.h  blowfish.c  blowfish.h  bus.c  bus.h  camel.c  camel.h  can.c  can.h  cat.c  cat.h  cheetah.c  cheetah.h  chick.c  chick.h  chocolate.c  chocolate.h  cow.c  cow.h  crab.c  crab.h  cricket.c  (+129 more)
sprites/bmps/: animals.aseprite
sprites/extras/: bg.aseprite  logo.aseprite
sprites/ui/: ui.aseprite
src/: animations.c  animations.h  mem_manager.c  mem_manager.h  mem_manager_enums.h  music.c  music.h  sap.c  scene_battle.c  scene_battle.h  scene_results.c  scene_results.h  scene_store.c  scene_store.h  structs.h  tick.c  tick.h  ui.c  ui.h
stubs/: animations.c
tests/: decode.js  fuzz.js  helpers.js  package-lock.json  package.json  team_list.js  test.js
